--- a/styles2.css
+++ b/styles2.css
@@ -6,68 +6,46 @@ body {
   background-color: #d8da3d;
   color: #80007e;
 }
-
-aside {
+body header {
   width: 30%;
   margin-right: 5%;
 }
-
-ul {
+body header nav ul {
   list-style-type: none;
 }
-
-ul li {
+body header nav ul li {
   margin: 1em;
   padding: 0.5em;
 }
-
-ul li:nth-child(2n) {
-  background: linear-gradient(
-    90deg,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(255, 255, 255, 1) 90%,
-    rgba(0, 0, 255, 1) 90%,
-    rgba(0, 0, 255, 1) 100%
-  );
+body header nav ul li:nth-child(2n) {
+  background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 90%, rgb(0, 0, 255) 90%, rgb(0, 0, 255) 100%);
 }
-
-ul li:nth-child(2n + 1) {
-  background: linear-gradient(
-    90deg,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(255, 255, 255, 1) 90%,
-    rgba(255, 165, 0, 1) 90%,
-    rgba(255, 165, 0, 1) 100%
-  );
+body header nav ul li:nth-child(2n+1) {
+  background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 90%, rgb(255, 165, 0) 90%, rgb(255, 165, 0) 100%);
 }
-
-#about {
+body #about {
   margin-top: 2em;
   border-bottom: 1px dashed;
 }
-#about p {
+body #about p {
   width: 100%;
   overflow: hidden;
 }
-
-#content p:nth-child(1) {
+body #content p:nth-child(1) {
   border: 2px dashed black;
   padding: 0.5em;
   text-align: left;
 }
-
-#content p:nth-child(2) {
+body #content p:nth-child(2) {
   border: 2px dashed red;
   padding: 0.5em;
   text-align: right;
 }
-
-#content p:nth-child(3) {
+body #content p:nth-child(3) {
   border: 2px dotted blue;
   padding: 0.5em;
   text-align: center;
 }
-
-#copyright {
+body #copyright {
   margin-top: 1em;
-}
+}/*# sourceMappingURL=styles2.css.map */
