--- a/style2.css
+++ b/style2.css
@@ -2,50 +2,57 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
   flex-flow: row;
-  justify-content: space-between;
+  justify-content: start;
   background-color: #d8da3d;
   color: #80007e;
 }
-body header {
+body aside {
+  margin-top: 1em;
   width: 30%;
   margin-right: 5%;
+  flex: 0 0 20vw;
 }
-body header nav ul {
+body aside ul {
   list-style-type: none;
 }
-body header nav ul li {
+body aside ul li {
   margin: 1em;
   padding: 0.5em;
 }
-body header nav ul li:nth-child(2n) {
+body aside ul li:nth-child(2n) {
   background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 90%, rgb(0, 0, 255) 90%, rgb(0, 0, 255) 100%);
 }
-body header nav ul li:nth-child(2n+1) {
+body aside ul li:nth-child(2n+1) {
   background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 90%, rgb(255, 165, 0) 90%, rgb(255, 165, 0) 100%);
 }
-body #about {
-  margin-top: 2em;
+body main {
+  width: 70%;
+}
+body .about-section {
   border-bottom: 1px dashed;
 }
-body #about p {
+body .about-section p {
   width: 100%;
   overflow: hidden;
 }
-body #content p:nth-child(1) {
+body .content-section p {
+  color: black;
+}
+body .content-section p:nth-child(1) {
   border: 2px dashed black;
   padding: 0.5em;
   text-align: left;
 }
-body #content p:nth-child(2) {
+body .content-section p:nth-child(2) {
   border: 2px dashed red;
   padding: 0.5em;
   text-align: right;
 }
-body #content p:nth-child(3) {
+body .content-section p:nth-child(3) {
   border: 2px dotted blue;
   padding: 0.5em;
   text-align: center;
 }
-body #copyright {
+body .copyright-section {
   margin-top: 1em;
-}/*# sourceMappingURL=styles2.css.map */
+}/*# sourceMappingURL=style2.css.map */
