--- a/styles1.css
+++ b/styles1.css
@@ -2,15 +2,19 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
   flex-flow: row;
-  justify-content: space-between;
+  justify-content: start;
   background-color: #d8da3d;
   color: #80007e;
 }
 aside {
+  margin-top: 1em;
   width: 30%;
   margin-right: 5%;
+  flex: 0 0 20vw;
 }
-
+body main {
+  width: 70%;
+}
 ul {
   list-style-type: none;
 }
