--- a/style2.scss
+++ b/style2.scss
@@ -43,6 +43,8 @@ body {
     }
 
     .about-section {
+        padding-bottom: 2em;
+        margin-bottom: 1em;
         border-bottom: 1px dashed;
 
         p {
