--- a/style2.css
+++ b/style2.css
@@ -1,3 +1,4 @@
+/* General Styles */
 body {
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
@@ -5,12 +6,18 @@ body {
   justify-content: start;
   background-color: #d8da3d;
   color: #80007e;
+  /* Sidebar Styles */
+  /* Main Content Styles */
+  /* About Section Styles */
+  /* Content Section Styles */
+  /* Copyright Section Styles */
 }
 body aside {
   margin-top: 1em;
   width: 30%;
   margin-right: 5%;
   flex: 0 0 20vw;
+  /* Navigation List Styles */
 }
 body aside ul {
   list-style-type: none;
@@ -18,6 +25,7 @@ body aside ul {
 body aside ul li {
   margin: 1em;
   padding: 0.5em;
+  /* Alternating List Item Styles */
 }
 body aside ul li:nth-child(2n) {
   background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 90%, rgb(0, 0, 255) 90%, rgb(0, 0, 255) 100%);
@@ -32,6 +40,7 @@ body .about-section {
   padding-bottom: 2em;
   margin-bottom: 1em;
   border-bottom: 1px dashed;
+  /* Overflow Hidden for Paragraphs */
 }
 body .about-section p {
   width: 100%;
@@ -39,6 +48,7 @@ body .about-section p {
 }
 body .content-section p {
   color: black;
+  /* Individual Paragraph Styles */
 }
 body .content-section p:nth-child(1) {
   border: 2px dashed black;
