--- a/style2.css
+++ b/style2.css
@@ -6,11 +6,20 @@ body {
   justify-content: start;
   background-color: #d8da3d;
   color: #80007e;
+  /* Bounce Animation */
   /* Sidebar Styles */
   /* Main Content Styles */
-  /* About Section Styles */
-  /* Content Section Styles */
-  /* Copyright Section Styles */
+}
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-20px);
+  }
+  60% {
+    transform: translateY(-10px);
+  }
 }
 body aside {
   margin-top: 1em;
@@ -35,36 +44,45 @@ body aside ul li:nth-child(2n+1) {
 }
 body main {
   width: 70%;
+  /* About Section Styles */
+  /* Content Section Styles */
+  /* Copyright Section Styles */
 }
-body .about-section {
+body main .about-section {
   padding-bottom: 2em;
   margin-bottom: 1em;
   border-bottom: 1px dashed;
   /* Overflow Hidden for Paragraphs */
 }
-body .about-section p {
+body main .about-section p {
   width: 100%;
   overflow: hidden;
 }
-body .content-section p {
+body main .content-section {
+  /* Apply Bounce Effect on Hover for Bordered div */
+}
+body main .content-section .bordered-div {
   color: black;
   /* Individual Paragraph Styles */
 }
-body .content-section p:nth-child(1) {
+body main .content-section .bordered-div:nth-child(1) p {
   border: 2px dashed black;
   padding: 0.5em;
   text-align: left;
 }
-body .content-section p:nth-child(2) {
+body main .content-section .bordered-div:nth-child(2) p {
   border: 2px dashed red;
   padding: 0.5em;
   text-align: right;
 }
-body .content-section p:nth-child(3) {
+body main .content-section .bordered-div:nth-child(3) p {
   border: 2px dotted blue;
   padding: 0.5em;
   text-align: center;
 }
-body .copyright-section {
+body main .content-section .bordered-div:hover {
+  animation: bounce 0.6s ease;
+}
+body main .copyright-section {
   margin-top: 1em;
 }/*# sourceMappingURL=style2.css.map */
