--- a/style2.scss
+++ b/style2.scss
@@ -7,6 +7,28 @@ body {
     background-color: #d8da3d;
     color: #80007e;
 
+    /* Bounce Animation */
+    @keyframes bounce {
+
+        0%,
+        20%,
+        50%,
+        80%,
+        100% {
+            transform: translateY(0);
+        }
+
+        40% {
+            transform: translateY(-20px);
+        }
+
+        60% {
+            transform: translateY(-10px);
+        }
+    }
+
+
+
     /* Sidebar Styles */
     aside {
         margin-top: 1em;
@@ -45,47 +67,56 @@ body {
     /* Main Content Styles */
     main {
         width: 70%;
-    }
 
-    /* About Section Styles */
-    .about-section {
-        padding-bottom: 2em;
-        margin-bottom: 1em;
-        border-bottom: 1px dashed;
 
-        /* Overflow Hidden for Paragraphs */
-        p {
-            width: 100%;
-            overflow: hidden;
-        }
-    }
+        /* About Section Styles */
+        .about-section {
+            padding-bottom: 2em;
+            margin-bottom: 1em;
+            border-bottom: 1px dashed;
 
-    /* Content Section Styles */
-    .content-section p {
-        color: black;
-
-        /* Individual Paragraph Styles */
-        &:nth-child(1) {
-            border: 2px dashed black;
-            padding: 0.5em;
-            text-align: left;
+            /* Overflow Hidden for Paragraphs */
+            p {
+                width: 100%;
+                overflow: hidden;
+            }
         }
 
-        &:nth-child(2) {
-            border: 2px dashed red;
-            padding: 0.5em;
-            text-align: right;
+
+        /* Content Section Styles */
+        .content-section {
+            .bordered-div {
+                color: black;
+
+                /* Individual Paragraph Styles */
+                &:nth-child(1) p {
+                    border: 2px dashed black;
+                    padding: 0.5em;
+                    text-align: left;
+                }
+
+                &:nth-child(2) p {
+                    border: 2px dashed red;
+                    padding: 0.5em;
+                    text-align: right;
+                }
+
+                &:nth-child(3) p {
+                    border: 2px dotted blue;
+                    padding: 0.5em;
+                    text-align: center;
+                }
+            }
+
+            /* Apply Bounce Effect on Hover for Bordered div */
+            .bordered-div:hover {
+                animation: bounce 0.6s ease;
+            }
         }
 
-        &:nth-child(3) {
-            border: 2px dotted blue;
-            padding: 0.5em;
-            text-align: center;
+        /* Copyright Section Styles */
+        .copyright-section {
+            margin-top: 1em;
         }
-    }
-
-    /* Copyright Section Styles */
-    .copyright-section {
-        margin-top: 1em;
     }
 }
