--- a/style2.css
+++ b/style2.css
@@ -1,3 +1,5 @@
+/* Variables */
+/* Bounce Animation */
 /* General Styles */
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -6,40 +8,28 @@ body {
   justify-content: start;
   background-color: #d8da3d;
   color: #80007e;
-  /* Bounce Animation */
   /* Sidebar Styles */
   /* Main Content Styles */
 }
-@keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    transform: translateY(0);
-  }
-  40% {
-    transform: translateY(-20px);
-  }
-  60% {
-    transform: translateY(-10px);
-  }
-}
-body aside {
+body .sidebar {
   margin-top: 1em;
   width: 30%;
   margin-right: 5%;
   flex: 0 0 20vw;
   /* Navigation List Styles */
 }
-body aside ul {
+body .sidebar ul {
   list-style-type: none;
 }
-body aside ul li {
+body .sidebar ul li {
   margin: 1em;
   padding: 0.5em;
   /* Alternating List Item Styles */
 }
-body aside ul li:nth-child(2n) {
+body .sidebar ul li:nth-child(2n) {
   background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 90%, rgb(0, 0, 255) 90%, rgb(0, 0, 255) 100%);
 }
-body aside ul li:nth-child(2n+1) {
+body .sidebar ul li:nth-child(2n+1) {
   background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 90%, rgb(255, 165, 0) 90%, rgb(255, 165, 0) 100%);
 }
 body main {
@@ -64,11 +54,11 @@ body main .break-point {
 }
 body main .content-section {
   width: 70%;
-  /* Apply Bounce Effect on Hover for Bordered div */
 }
 body main .content-section .bordered-div {
   color: black;
   /* Individual Paragraph Styles */
+  /* Apply Bounce Effect on Hover for Bordered div */
 }
 body main .content-section .bordered-div:nth-child(1) p {
   border: 2px dashed black;
@@ -87,6 +77,17 @@ body main .content-section .bordered-div:nth-child(3) p {
 }
 body main .content-section .bordered-div:hover {
   animation: bounce 0.6s ease;
+}
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-20px);
+  }
+  60% {
+    transform: translateY(-10px);
+  }
 }
 body main .copyright-section {
   margin-top: 1em;
