--- a/style2.scss
+++ b/style2.scss
@@ -1,36 +1,34 @@
+/* Variables */
+$primary-color: #d8da3d;
+$secondary-color: #80007e;
+
+/* Bounce Animation */
+@mixin bounce-animation {
+    @keyframes bounce {
+        0%, 20%, 50%, 80%, 100% {
+            transform: translateY(0);
+        }
+        40% {
+            transform: translateY(-20px);
+        }
+        60% {
+            transform: translateY(-10px);
+        }
+    }
+    animation: bounce 0.6s ease;
+}
+
 /* General Styles */
 body {
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     flex-flow: row;
     justify-content: start;
-    background-color: #d8da3d;
-    color: #80007e;
-
-    /* Bounce Animation */
-    @keyframes bounce {
-
-        0%,
-        20%,
-        50%,
-        80%,
-        100% {
-            transform: translateY(0);
-        }
-
-        40% {
-            transform: translateY(-20px);
-        }
-
-        60% {
-            transform: translateY(-10px);
-        }
-    }
-
-
+    background-color: $primary-color;
+    color: $secondary-color;
 
     /* Sidebar Styles */
-    aside {
+    .sidebar {
         margin-top: 1em;
         width: 30%;
         margin-right: 5%;
@@ -112,11 +110,11 @@ body {
                     padding: 0.5em;
                     text-align: center;
                 }
-            }
 
-            /* Apply Bounce Effect on Hover for Bordered div */
-            .bordered-div:hover {
-                animation: bounce 0.6s ease;
+                /* Apply Bounce Effect on Hover for Bordered div */
+                &:hover {
+                    @include bounce-animation;
+                }
             }
         }
 
